--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@
 #spring.mvc.view.prefix=/WEB-INF/
 
 #configuracion base datos
-spring.datasource.url=jdbc:mysql://localhost:3306/hamilton
+spring.datasource.url=jdbc:mysql://localhost:3306/hamilton?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=venti3872268
 
 #nos muestra las query
 spring.jpa.show-sql= true
 
 #instrucción para actualizar o crear la base
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+
+#Clave secreta que irá como firma en el token
+jwt.secret= ale123
